# LABSAD

./: Dockerfile  Dockerfile.models  fname  requirements.txt
files/: AAPL_daily_data.csv  ABBV_daily_data.csv  ABNB_daily_data.csv  ABT_daily_data.csv  ACGL_daily_data.csv  ACN_daily_data.csv  ADBE_daily_data.csv  ADI_daily_data.csv  ADM_daily_data.csv  ADP_daily_data.csv  ADSK_daily_data.csv  AEE_daily_data.csv  AEP_daily_data.csv  AES_daily_data.csv  AFL_daily_data.csv  AIG_daily_data.csv  AIZ_daily_data.csv  AJG_daily_data.csv  AKAM_daily_data.csv  ALB_daily_data.csv  ALGN_daily_data.csv  ALLE_daily_data.csv  ALL_daily_data.csv  AMAT_daily_data.csv  AMCR_daily_data.csv  AMD_daily_data.csv  AME_daily_data.csv  AMGN_daily_data.csv  AMP_daily_data.csv  AMT_daily_data.csv  AMZN_daily_data.csv  ANET_daily_data.csv  ANSS_daily_data.csv  AON_daily_data.csv  AOS_daily_data.csv  APA_daily_data.csv  APD_daily_data.csv  APH_daily_data.csv  APTV_daily_data.csv  ARE_daily_data.csv  (+465 more)
files/models/: scaler_X.pkl
files/portfolio_tests/: optimization.ipynb
files/stock_datasets/: AAPL_daily_data.csv  ABT_daily_data.csv  ADBE_daily_data.csv  ADM_daily_data.csv  ADP_daily_data.csv  ADSK_daily_data.csv  AEE_daily_data.csv  AFL_daily_data.csv  AIG_daily_data.csv  AKAM_daily_data.csv  ALB_daily_data.csv  ALGN_daily_data.csv  ALLE_daily_data.csv  AMAT_daily_data.csv  AMD_daily_data.csv  AME_daily_data.csv  AMTM_daily_data.csv  AMZN_daily_data.csv  ANSS_daily_data.csv  AON_daily_data.csv  AOS_daily_data.csv  APA_daily_data.csv  APD_daily_data.csv  ARE_daily_data.csv  ATO_daily_data.csv  AXON_daily_data.csv  AXP_daily_data.csv  AZO_daily_data.csv  BALL_daily_data.csv  BAX_daily_data.csv  BEN_daily_data.csv  BG_daily_data.csv  BIIB_daily_data.csv  BKNG_daily_data.csv  BK_daily_data.csv  BLDR_daily_data.csv  BMY_daily_data.csv  BR_daily_data.csv  BSX_daily_data.csv  BXP_daily_data.csv  (+205 more)
labsadbackend/: .gitignore  companysInfo.json  pyproject.toml
labsadbackend/files/: AAPL_daily_data.csv  ABBV_daily_data.csv  ABNB_daily_data.csv  ABT_daily_data.csv  ACGL_daily_data.csv  ACN_daily_data.csv  ADBE_daily_data.csv  ADI_daily_data.csv  ADM_daily_data.csv  ADP_daily_data.csv  ADSK_daily_data.csv  AEE_daily_data.csv  AEP_daily_data.csv  AES_daily_data.csv  AFL_daily_data.csv  AIG_daily_data.csv  AIZ_daily_data.csv  AJG_daily_data.csv  AKAM_daily_data.csv  ALB_daily_data.csv  ALGN_daily_data.csv  ALLE_daily_data.csv  ALL_daily_data.csv  AMAT_daily_data.csv  AMCR_daily_data.csv  AMD_daily_data.csv  AME_daily_data.csv  AMGN_daily_data.csv  AMP_daily_data.csv  AMTM_daily_data.csv  AMT_daily_data.csv  AMZN_daily_data.csv  ANET_daily_data.csv  ANSS_daily_data.csv  AON_daily_data.csv  AOS_daily_data.csv  APA_daily_data.csv  APD_daily_data.csv  APH_daily_data.csv  APTV_daily_data.csv  (+460 more)
labsadbackend/labsadbackend/: main.py
labsadbackend/labsadbackend/models/: __init__.py  portfolio.py
labsadbackend/labsadbackend/repo/: __init__.py  portfolioRepo.py  ticketRepo.py
labsadbackend/labsadbackend/routers/: portfolioRouter.py  tickersRouter.py
labsadbackend/labsadbackend/routers/models/: lstm_stock_model.h5  scaler_X.pkl  scaler_Y.pkl
labsadmodels/: pyproject.toml
labsadmodels/labsadmodels/: main.py
labsadmodels/labsadmodels/models/: scaler_Y.pkl
