[tool.poetry]
name = "labsadbackend"
version = "0.1.0"
description = ""
authors = ["Tiago Nora <33982771+TiagoNora@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.11,<3.11"
yfinance = "^0.2.48"
requests = "^2.32.3"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
ujson = "^5.10.0"
pymongo = "^4.10.1"
redis = "^5.2.0"
setuptools = "^75.5.0"
fredapi = "^0.5.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "labsadbackend.main:start"