[tool.poetry]
name = "labsadmodels"
version = "0.1.0"
description = ""
authors = ["Tiago Nora <33982771+TiagoNora@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.32.1"
fastapi = "^0.115.5"
fastapi-utilities = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "labsadmodels.main:start"